Migrate to use SBT autoPlugins.